# api-service

./: .gitignore  .gitmodules  Dockerfile  Exporter.js  Importer.js  Node.js  Properties.js  README.md  api.yml  docker-compose.yml  index.html  index.js
.github/workflows/: cargo-tests.yml  infracost.yml  semgrep.yml
deploy/: backend.tf  main.tf  variables.tf
deploy/aws/: upload_image.sh
models/: Evita.js  MinMax.js
riskytrees/: Cargo.toml  rust-toolchain.toml
riskytrees/src/: database.rs  main.rs
riskytrees/src/auth/: mod.rs
riskytrees/src/constants/: mod.rs
riskytrees/src/database/: mod.rs
riskytrees/src/errors/: mod.rs
riskytrees/src/expression_evaluator/: mod.rs
riskytrees/src/helpers/: mod.rs
riskytrees/src/history/: mod.rs
riskytrees/src/models/: mod.rs
riskytrees/src/oidc/: mod.rs
riskytrees/src/recommendations/: mod.rs
riskytrees/src/tests/: mod.rs
tests/: bootstrapdb.mongocommands  google_oidc.env  mocklab_odic.env  run_api_tests.sh  run_lint.sh  simulatedb.sh  test_Node.html  test_api.py
tests/quality/: runChecks.sh
tests/unit/: test_Export.html  test_Import.html  test_Node.html
