[package]
name = "riskytrees"
version = "0.1.0"
authors = ["Josiah Bruner <jsbruner@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
bson = "1.2.2"
rocket_cors = "0.5.1"
openidconnect = "2.4.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
evalexpr = "8.1.0"

[dependencies.mongodb]
version = "2.0.0-beta"
default-features = false
features = ["sync"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
