[package]
name = "riskytrees"
version = "0.1.0"
authors = ["Josiah Bruner <jsbruner@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
bson = "1.2.2"
openidconnect = "2.4.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
evalexpr = "8.1.0"

[dependencies.mongodb]
version = "2.3.1"
