[package]
name = "riskytrees"
version = "0.1.0"
authors = ["Josiah Bruner <jsbruner@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
bson = "1.2.2"
openidconnect = "2.4.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
evalexpr = "8.1.0"
async-recursion = "1.0.4"
rand = "0.8.5"
octocrab = "0.42.1"
secrecy = "0.10.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.95.0"
tokio = "1.45.1"

[dependencies.mongodb]
version = "2.3.1"

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]